# claude_plugins

./: LICENSE  README.md  example_usage.py  localhost.har  next steps.md
.claude/commands/: implement_plan.md  research_codebase.md
bdd_tests/: Dockerfile  README.md  pytest.ini
bdd_tests/.dvc/: config
bdd_tests/.github/workflows/: test.yaml
bdd_tests/features/: conversations.feature
bdd_tests/src/: agent_wrapper.py  data_loader.py  mcp_verifier.py
bdd_tests/tests/: conftest.py
bdd_tests/tests/step_defs/: common_steps.py  conversation_steps.py  mcp_steps.py
features/: llm_evaluation.feature
research/: DVC Stored Gherkin.md  Python BDD Framework for DeepEval LLM Testing.md  mcp_capture_example.py
research_1/: initial_prompt.md
research_1/bdd_tests/: pyproject.toml  requirements.txt
research_1/bdd_tests/data/: .gitignore  test_cases.json.dvc  test_cases_schema.json
research_1/bdd_tests/features/: deepeval_metrics.feature  mcp_tools.feature
research_1/bdd_tests/k8s/: serviceaccount.yaml  test-job.yaml
research_1/bdd_tests/src/: elk_reporter.py
research_1/bdd_tests/tests/step_defs/: data_steps.py  deepeval_steps.py
research_1/research/: End-to-End.md
research_1/sample_code/: .gitignore  README.md
research_1/sample_code/src/: __init__.py  mock_llm.py
research_1/sample_code/tests/: conftest.py
research_1/thoughts/shared/plans/: 2026-01-20-bdd-deepeval-mcp-testing-framework.md
research_2/: plan.md  research.md
research_2/slash-command-mvp/: .env.example  README.md  docker-compose.yml
research_2/slash-command-mvp/agent-middleware/: Dockerfile  pyproject.toml
research_2/slash-command-mvp/agent-middleware/src/: agent.py  config.py  interceptor.py  main.py  registry_client.py  skills_context.py
research_2/slash-command-mvp/agent-middleware/src/mcp_tools/: mock_git.py  mock_jira.py  tool_registry.py
research_2/slash-command-mvp/agent-middleware/tests/: test_interceptor.py  test_registry_client.py
research_2/slash-command-mvp/docs/: AGENT_SKILLS_SPEC.md  ARCHITECTURE.md  PRODUCTION_NOTES.md
research_2/slash-command-mvp/frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
research_2/slash-command-mvp/frontend/src/: App.tsx
research_2/slash-command-mvp/frontend/src/hooks/: useSkills.ts  (+1 more)
research_2/slash-command-mvp/frontend/tests/: CommandPalette.test.tsx  useSlashCommands.test.ts
research_2/slash-command-mvp/prompt-registry/: Dockerfile  pyproject.toml
research_2/slash-command-mvp/prompt-registry/src/: config.py  database.py  main.py  models.py  seed.py
research_2/slash-command-mvp/prompt-registry/src/routers/: commands.py  skills.py
research_2/slash-command-mvp/prompt-registry/src/services/: command_resolver.py  skill_loader.py
research_2/slash-command-mvp/prompt-registry/src/skills/code-review/: SKILL.md
research_2/slash-command-mvp/prompt-registry/src/skills/incident-response/: SKILL.md
research_2/slash-command-mvp/prompt-registry/tests/: conftest.py  test_commands.py  test_resolution.py  test_skills.py
sample_code/: CHANGELOG.md  SETUP.md  bootstrap.sh  install.sh  launch-claude-code.sh  pyproject.toml  pytest.ini  requirements.txt
sample_code/data/: .gitignore  test_cases.json.dvc
sample_code/examples/: .bashrc-snippet  .zshrc-snippet
sample_code/features/: rag_quality.feature
sample_code/tests/: __init__.py
sample_code/tests/step_defs/: test_llm_steps.py  test_rag_steps.py
tests/step_defs/: __init__.py
thoughts/shared/plans/: 2026-01-20-bdd-deepeval-mcp-testing-framework.md
thoughts/shared/research/: 2026-01-20-bdd-deepeval-testing-framework.md
(+7 files in other folders)
