[project]
name = "deepeval-bdd-example"
version = "0.1.0"
description = "BDD testing framework for LLM evaluation using pytest-bdd, DeepEval, and DVC"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pytest>=7.4.0",
    "pytest-bdd>=7.0.0",
    "deepeval>=0.21.0",
    "pytest-elk-reporter>=0.5.0",
    "boto3>=1.28.0",
    "moto[s3]>=4.2.0",
    "dvc>=3.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--junitxml=test-results/junit.xml",
]
markers = [
    "rag: RAG pipeline tests",
    "safety: Safety and toxicity tests",
    "regression: Regression tests",
    "critical: Critical path tests",
    "slow: Slow running tests",
]
bdd_features_base_dir = "features/"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
