[project]
name = "bdd-deepeval-mcp-tests"
version = "0.1.0"
description = "BDD testing framework for Pydantic AI Agent with MCP Server"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "deepeval>=1.0.0",
    "pydantic-ai>=0.1.0",
    "boto3>=1.28.0",
    "dvc[s3]>=3.0.0",
    "pytest-elk-reporter>=0.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "mcp: MCP tool verification tests",
    "conversation: Multi-turn conversation tests",
    "integration: Integration tests requiring live agent",
]
bdd_features_base_dir = "features/"
