[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-middleware"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "copilotkit>=0.1.37",
    "pydantic-ai>=0.0.17",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "anthropic>=0.36.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
